@@ -16,8 +16,8 @@ import java.util.*;
 import org.pavlinic.chat.PacketHandler;
 
 public class Server {
-	static String sVersion = "86";
-	static String compileDate = "May 12, 2013";
+	static String sVersion = "87";
+	static String compileDate = "May 13, 2013";
 	
 	static int minClientVer = 70;     // the minimum version clients must be running to connect
 	
